# c3s-project

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  connect.sh  docker-compose.yml  insert.sh
scripts/: delete.sh
sql/: create.sql  load.sql
src/: database.rs  err.rs  lib.rs  main.rs  register.rs  reports.rs
