[package]
name = "erp"
version = "0.1.0"
authors = ["Pedro Dias <pdcmpa@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
postgres = "0.17"
postgres-types = { version = "0.1", features = ["derive"]}
failure = { version = "0.1", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
