[package]
name = "erp"
version = "0.1.0"
authors = ["Pedro Dias <pdcmpa@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["uuid"] }
postgres = { version = "0.17", features = ["with-uuid-0_8"] }
postgres-types = { version = "0.1", features = ["derive"] }
failure = { version = "0.1", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
